# pirate-academy

./: .env.example  .gitignore  PROGRESS.md  README.md  codama.json  demo-seed.html  mdx-components.tsx  mdx.d.ts  next.config.ts  package.json  pnpm-lock.yaml  teleprompter-demo.html  tsconfig.json
anchor/: Anchor.toml  README.md
anchor/programs/pirate-academy/: Cargo.toml
anchor/programs/pirate-academy/src/: errors.rs  lib.rs  state.rs  tests.rs
anchor/programs/pirate-academy/src/instructions/: mint_badge.rs  mod.rs  register_pirate.rs
app/: layout.tsx  mdx.d.ts  page.tsx
app/api/onboard/: route.ts
app/badge/: client.tsx  page.tsx
app/components/: DemoSeeder.tsx  ErrorBoundary.tsx  HeroSection.tsx  IslandMap.tsx  MobileBlocker.tsx  mint-badge-button.tsx
app/components/lessons/: CodeExercise.tsx  CodeExerciseInner.tsx  FinalLesson.tsx  IslandIndex.tsx  LessonClient.tsx
app/dev/: page.tsx
app/dev/lesson/: page.tsx
app/island/[island]/: page.tsx
app/lib/: lessons.ts  progress.ts
app/lib/hooks/: use-sound.ts
app/lib/validators/: rust.ts
app/onboard/: OnboardingFlow.tsx  page.tsx
docs/: backlog.md
docs/superpowers/plans/: 2026-04-18-crab-forge-full.md  2026-04-18-day12-polish.md  2026-04-18-landing-map-gating.md  2026-05-01-phase1-business-foundation.md  2026-05-04-ai-onboarding.md
docs/superpowers/specs/: 2026-04-18-crab-forge-lessons-design.md  2026-04-18-day12-polish-design.md  2026-04-18-landing-map-gating-design.md  (+2 more)
public/: cto.html  notes.html  pitch.html  teleprompter-mobile.html
scripts/: smoke.ts
(+14 files in other folders)
