[package]
name = "pirate-academy"
version = "0.1.0"
description = "Pirate Academy — gamified Solana onboarding"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pirate_academy"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"

[dev-dependencies]
litesvm = "=0.7.1"
solana-sdk = "2.3"
sha2 = "0.10"
